--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -2,124 +2,159 @@
 <html lang="th">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Profile Page Template" />
-  <title>โปรไฟล์ — ตัวอย่าง</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Kitinan Kanthakat</title>
+  <meta name="description" content="เทมเพลตหน้าโปรไฟล์ส่วนตัว (HTML + CSS + JS)" />
+  <style>
+    :root{
+      --bg:#f4f9f4; --card:#ffffff; --muted:#4d5d53; --accent:#2d6a4f; --glass: rgba(255,255,255,0.6);
+    }
+    [data-theme="dark"]{ --bg:#1b2620; --card:#243832; --muted:#a8bfae; --accent:#95d5b2; --glass: rgba(255,255,255,0.05); }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial; background:linear-gradient(180deg,var(--bg),#e9f5e9); color:var(--muted);}
+    .container{max-width:1000px;margin:36px auto;padding:20px;}
+    .profile-grid{display:grid;grid-template-columns:280px 1fr;gap:20px;align-items:start}
+    .card{background:var(--card);border-radius:14px;padding:20px;box-shadow:0 6px 20px rgba(2,6,23,0.06);}
+
+    /* Sidebar */
+    .avatar{width:120px;height:120px;border-radius:999px;overflow:hidden;border:6px solid var(--glass);display:block;margin:0 auto 12px;}
+    .avatar img{width:100%;height:100%;object-fit:cover;display:block}
+    h1{margin:6px 0 0;font-size:20px;color:var(--accent)}
+    h2{margin:8px 0 0;font-size:14px;color:var(--muted)}
+    .meta{font-size:13px;margin-top:10px;text-align:center;color:var(--muted)}
+    .socials{display:flex;gap:10px;justify-content:center;margin-top:12px}
+    .socials a{display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;border-radius:8px;background:linear-gradient(180deg,var(--glass),transparent);text-decoration:none;color:var(--accent)}
+
+    .btn{display:inline-block;padding:10px 14px;border-radius:10px;background:var(--accent);color:#fff;text-decoration:none;font-weight:600}
+    .btn.secondary{background:transparent;color:var(--accent);border:1px solid rgba(45,106,79,0.2)}
+
+    /* Main */
+    .section{margin-bottom:18px}
+    .bio{font-size:15px;color:#1b4332;line-height:1.55}
+    .skills{display:flex;flex-wrap:wrap;gap:10px;margin-top:12px}
+    .skill{flex:1 1 130px;background:linear-gradient(180deg,var(--glass),transparent);padding:10px;border-radius:10px}
+    .skill .label{font-size:13px;color:var(--muted);margin-bottom:8px}
+    .progress{height:8px;background:rgba(15,23,36,0.06);border-radius:8px;overflow:hidden}
+    .progress > i{display:block;height:100%;background:linear-gradient(90deg,var(--accent),#52b788)}
+
+    .projects-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:12px}
+    .project{height:110px;border-radius:10px;background:linear-gradient(180deg,#d8f3dc,#fff);display:flex;align-items:end;padding:10px;font-weight:700;color:#1b4332}
+
+    .contact form{display:grid;gap:8px}
+    input,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(15,23,36,0.06);font-size:14px}
+    textarea{min-height:100px}
+
+    /* small screens */
+    @media (max-width:880px){
+      .profile-grid{grid-template-columns:1fr;}
+      .avatar{margin:0 auto 10px}
+    }
+  </style>
 </head>
-<body class="antialiased text-slate-800 bg-white dark:bg-slate-900 dark:text-slate-100">
-  <!-- Header -->
-  <header class="border-b border-slate-200 dark:border-slate-800">
-    <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-      <span class="text-lg font-bold">MyProfile</span>
-      <button id="themeToggle" class="px-3 py-1.5 rounded-md border text-sm">Toggle theme</button>
+<body data-theme="light">
+  <div class="container">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
+      <div>
+        <strong style="font-size:18px;color:var(--accent)">หน้าโปรไฟล์</strong>
+        <div style="font-size:13px;color:var(--muted)">โทนธรรมชาติ — HTML Template</div>
+      </div>
+      <div style="display:flex;gap:8px;align-items:center">
+        <button id="themeToggle" class="btn secondary">สลับธีม</button>
+        <a class="btn" href="#">ดาวน์โหลด Resume</a>
+      </div>
     </div>
-  </header>
 
-  <!-- Profile Section -->
-  <main>
-    <section class="py-12">
-      <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 text-center">
-        <img src="images/kitinan.jpg" alt="Profile" class="w-32 h-32 rounded-full mx-auto border shadow" />
-        <h1 class="mt-4 text-3xl font-extrabold">Kitinan Kanthakat</h1>
-        <p class="mt-2 text-slate-600 dark:text-slate-300">ตำแหน่ง / อาชีพ</p>
-        <p class="mt-4 max-w-xl mx-auto text-slate-600 dark:text-slate-300">แนะนำตัวสั้น ๆ เกี่ยวกับคุณ ความสนใจ ประสบการณ์ หรือสิ่งที่คุณกำลังทำอยู่</p>
-
-        <!-- Social Links -->
-        <div class="mt-6 flex justify-center gap-4">
-          <a href="#" class="text-blue-600 hover:underline">Facebook</a>
-          <a href="#" class="text-sky-500 hover:underline">Twitter</a>
-          <a href="#" class="text-gray-800 hover:underline">GitHub</a>
-          <a href="#" class="text-blue-700 hover:underline">LinkedIn</a>
+    <div class="profile-grid">
+      <!-- Sidebar -->
+      <aside class="card">
+        <div class="avatar">
+          <img src="https://via.placeholder.com/480x480.png?text=Avatar" alt="Avatar" />
         </div>
-      </div>
-    </section>
+        <h1>ชื่อ ของคุณ</h1>
+        <h2>ตำแหน่ง — นักพัฒนาเว็บ / นักออกแบบ</h2>
+        <div class="meta">อาศัยอยู่ กรุงเทพมหานคร · ทำงานเป็นฟรีแลนซ์ · เปิดรับงาน</div>
 
-    <!-- Skills -->
-    <section class="py-12 bg-slate-50 dark:bg-slate-800">
-      <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8">
-        <h2 class="text-2xl font-bold text-center">ทักษะ</h2>
-        <p class="mt-2 text-center text-slate-600 dark:text-slate-300">รวมทักษะหลักและความสามารถที่ถนัด</p>
-        <div class="mt-6 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 text-center">
-          <div class="p-4 border rounded-lg">HTML</div>
-          <div class="p-4 border rounded-lg">CSS</div>
-          <div class="p-4 border rounded-lg">JavaScript</div>
-          <div class="p-4 border rounded-lg">React</div>
-          <div class="p-4 border rounded-lg">Node.js</div>
-          <div class="p-4 border rounded-lg">Python</div>
-          <div class="p-4 border rounded-lg">UI/UX</div>
-          <div class="p-4 border rounded-lg">อื่น ๆ</div>
+        <div class="socials" aria-hidden>
+          <a href="#" title="GitHub" aria-label="GitHub">G</a>
+          <a href="#" title="LinkedIn" aria-label="LinkedIn">in</a>
+          <a href="#" title="Twitter" aria-label="Twitter">T</a>
         </div>
-      </div>
-    </section>
 
-    <!-- Portfolio / Projects -->
-    <section class="py-12">
-      <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8">
-        <h2 class="text-2xl font-bold text-center">ผลงาน</h2>
-        <p class="mt-2 text-center text-slate-600 dark:text-slate-300">ตัวอย่างโครงการหรือผลงานที่เคยทำ</p>
-        <div class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
-          <div class="p-4 border rounded-lg bg-white dark:bg-slate-900">
-            <img src="https://via.placeholder.com/400x200" alt="Project" class="rounded mb-3" />
-            <h3 class="font-semibold">โครงการ A</h3>
-            <p class="text-sm text-slate-600">รายละเอียดสั้น ๆ ของโครงการ เช่น วัตถุประสงค์ เทคโนโลยีที่ใช้ และผลลัพธ์ที่ได้</p>
-          </div>
-          <div class="p-4 border rounded-lg bg-white dark:bg-slate-900">
-            <img src="https://via.placeholder.com/400x200" alt="Project" class="rounded mb-3" />
-            <h3 class="font-semibold">โครงการ B</h3>
-            <p class="text-sm text-slate-600">รายละเอียดสั้น ๆ ของโครงการ เช่น สิ่งที่เรียนรู้หรือสิ่งที่พัฒนาขึ้นจากการทำงาน</p>
-          </div>
+        <div style="margin-top:16px;text-align:center">
+          <a class="btn" href="#">ติดต่อ</a>
         </div>
-      </div>
-    </section>
+      </aside>
 
-    <!-- Contact -->
-    <section class="py-12 bg-slate-50 dark:bg-slate-800">
-      <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:px-8">
-        <h2 class="text-2xl font-bold text-center">ติดต่อ</h2>
-        <p class="mt-2 text-center text-slate-600 dark:text-slate-300">หากสนใจร่วมงานหรือพูดคุย สามารถส่งข้อความหาได้เลย</p>
-        <form class="mt-6 grid grid-cols-1 gap-4">
-          <input type="text" placeholder="ชื่อ" class="w-full p-3 border rounded" />
-          <input type="email" placeholder="อีเมล" class="w-full p-3 border rounded" />
-          <textarea placeholder="ข้อความ" rows="4" class="w-full p-3 border rounded"></textarea>
-          <div class="text-right">
-            <button type="submit" class="px-5 py-3 bg-indigo-600 text-white rounded">ส่งข้อความ</button>
+      <!-- Main content -->
+      <main>
+        <section class="card section">
+          <div class="bio">
+            <h3 style="color:#2d6a4f;margin-top:0">แนะนำตัว</h3>
+            <p style="color:#1b4332;margin:0 0 8px;font-weight:600">สวัสดีครับ ผมชื่อ ชื่อ ของคุณ — ชอบทำเว็บไซต์ ชอบออกแบบอะไรที่ดูสบายตา ใช้งานง่าย และเหมาะกับทุกคน</p>
+            <p>ผมเคยทำงานทั้งในบริษัทและรับงานฟรีแลนซ์ สนุกกับการเขียน HTML, CSS, JavaScript รวมถึงเล่นกับเฟรมเวิร์กใหม่ ๆ อยู่เสมอ อีกอย่างที่ชอบคือการออกแบบ UI/UX ให้เว็บดูเป็นมิตรและใช้ง่าย</p>
+            <p>ช่วงนี้กำลังโฟกัสการทำงานที่เชื่อมโยงกับธรรมชาติ และอยากสร้างผลงานที่ทั้งเท่และยั่งยืน ใครสนใจร่วมงานหรืออยากแลกเปลี่ยนประสบการณ์ ก็ติดต่อมาได้เลยนะครับ 🙌</p>
           </div>
-        </form>
-      </div>
-    </section>
-  </main>
+          <div style="margin-top:14px">
+            <strong style="font-size:14px;color:var(--muted)">ทักษะ</strong>
+            <div class="skills">
+              <div class="skill">
+                <div class="label">HTML &amp; CSS</div>
+                <div class="progress" aria-hidden><i style="width:95%"></i></div>
+              </div>
+              <div class="skill">
+                <div class="label">JavaScript</div>
+                <div class="progress" aria-hidden><i style="width:85%"></i></div>
+              </div>
+              <div class="skill">
+                <div class="label">React / Vue</div>
+                <div class="progress" aria-hidden><i style="width:76%"></i></div>
+              </div>
+              <div class="skill">
+                <div class="label">UI / UX</div>
+                <div class="progress" aria-hidden><i style="width:82%"></i></div>
+              </div>
+            </div>
+          </div>
+        </section>
 
-  <!-- Footer -->
-  <footer class="border-t border-slate-200 dark:border-slate-800">
-    <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 py-6 text-sm text-center text-slate-600 dark:text-slate-400">
-      © <span id="year"></span> MyProfile
+        <section class="card section">
+          <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
+            <strong style="font-size:15px;color:var(--muted)">โปรเจกต์ / พอร์ตโฟลิโอ</strong>
+            <a href="#" style="font-size:13px;color:var(--accent);text-decoration:none">ดูทั้งหมด</a>
+          </div>
+          <div class="projects-grid">
+            <div class="project">Project A</div>
+            <div class="project">Project B</div>
+            <div class="project">Project C</div>
+            <div class="project">Project D</div>
+          </div>
+        </section>
+
+        <section class="card section contact">
+          <strong style="font-size:15px;color:var(--muted);display:block;margin-bottom:10px">ส่งข้อความ</strong>
+          <form onsubmit="event.preventDefault();alert('ฟอร์มจำลอง — เชื่อมต่อกับ backend เพื่อใช้งานจริง');">
+            <input type="text" placeholder="ชื่อ" required />
+            <input type="email" placeholder="อีเมล" required />
+            <textarea placeholder="ข้อความ"></textarea>
+            <div style="display:flex;gap:8px;justify-content:flex-end;margin-top:8px">
+              <button type="reset" class="btn secondary">ล้าง</button>
+              <button type="submit" class="btn">ส่ง</button>
+            </div>
+          </form>
+        </section>
+      </main>
     </div>
-  </footer>
+
+    <footer style="margin-top:20px;text-align:center;color:var(--muted);font-size:13px">© <span id="year"></span> ชื่อของคุณ — สร้างด้วย 🌿</footer>
+  </div>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    const themeToggle = document.getElementById('themeToggle');
-    function setTheme(dark) {
-      if (dark) document.documentElement.classList.add('dark');
-      else document.documentElement.classList.remove('dark');
-      localStorage.setItem('site-theme', dark ? 'dark' : 'light');
-    }
-    const saved = localStorage.getItem('site-theme');
-    if (saved) setTheme(saved === 'dark');
-    else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) setTheme(true);
-
-    themeToggle && themeToggle.addEventListener('click', () => {
-      const isDark = document.documentElement.classList.toggle('dark');
-      localStorage.setItem('site-theme', isDark ? 'dark' : 'light');
-    });
-
-    document.querySelector('form')?.addEventListener('submit', (e) => {
-      e.preventDefault();
-      alert('ขอบคุณสำหรับข้อความ! (ตัวอย่าง)');
-      e.target.reset();
+    const btn = document.getElementById('themeToggle');
+    btn.addEventListener('click', ()=>{
+      const cur = document.body.getAttribute('data-theme');
+      const next = cur === 'dark' ? 'light' : 'dark';
+      document.body.setAttribute('data-theme', next);
     });
   </script>
 </body>
