--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -72,7 +72,7 @@
         </div>
         <h1>Kitinan Kanthakat</h1>
         <h2>ตำแหน่ง — นักพัฒนาเว็บ / นักออกแบบ</h2>
-        <div class="meta">อาศัยอยู่ กรุงเทพมหานคร · ทำงานเป็นฟรีแลนซ์ · เปิดรับงาน</div>
+        <div class="meta">นักศึกษา</div>
 
         <div class="socials" aria-hidden>
           <a href="#" title="GitHub" aria-label="GitHub">G</a>
