--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -71,7 +71,7 @@
           <img src="https://via.placeholder.com/480x480.png?text=Avatar" alt="Avatar" />
         </div>
         <h1>Kitinan Kanthakat</h1>
-        <h2>ตำแหน่ง — นักพัฒนาเว็บ / นักออกแบบ</h2>
+        <h2>อาชีพ: นักศึกษา</h2>
         <div class="meta">นักศึกษา</div>
 
         <div class="socials" aria-hidden>
