--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>โปรไฟล์ — ชื่อของคุณ</title>
+  <title>Kitinan Kanthakat</title>
   <meta name="description" content="เทมเพลตหน้าโปรไฟล์ส่วนตัว (HTML + CSS + JS)" />
   <style>
     :root{
