--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <span class="ring" aria-hidden="true"></span>
           <img class="avatar" loading="lazy" src="team-members/images/kitinan.jpg" alt="Kitinan Kantakad">
         </div>
-        <h3>Kitinan Kantakad</h3>
+        <h3>Kitinan Kanthakat</h3>
         <p>Coffee man</p>
         <a class="open" href="team-members/kitinan.html" aria-label="Open Kitinan profile">Open</a>
       </article>
