--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -120,7 +120,7 @@
         <section class="card section">
           <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
             <strong style="font-size:15px;color:var(--muted)">โปรเจกต์ / พอร์ตโฟลิโอ</strong>
-            <a href="#" style="font-size:13px;color:var(--accent);text-decoration:none">ดูทั้งหม</a>
+            <a href="#" style="font-size:13px;color:var(--accent);text-decoration:none">ดูทั้งหมด</a>
           </div>
           <div class="projects-grid">
             <div class="project">Project A</div>
