--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -61,8 +61,8 @@
           // ข้อมูลหลัก (แก้ไขได้)
           name: "Kitinan Kanthakat",        // ← แก้ไขบรรทัดนี้
           title: "นักศึกษาวิศวกรรมเมคคาทรอนิกส์", // ← แก้ไขบรรทัดนี้
-          location: "กรุงเทพฯ, ไทย",          // ← แก้ไขบรรทัดนี้
-          avatar: "team-members/images/kitinan.jpg", // ← URL รูปโปรไฟล์ (แก้ไขได้)
+          location: "เชียงใหม่, ไทย",          // ← แก้ไขบรรทัดนี้
+          //avatar: " ", // ← URL รูปโปรไฟล์ (แก้ไขได้)
           bio: "สวัสดีครับ/ค่ะ ฉันชอบสร้างสิ่งประดิษฐ์, เขียนโค้ด และทดลองควบคุมระบบอัตโนมัติแบบสนุก ๆ.", // ← แก้ไขบรรทัดนี้
 
           // ช่องทางติดต่อ (แก้ไขได้)
