--- a/team-members/kitinan.html
+++ b/team-members/kitinan.html
@@ -62,7 +62,7 @@
           name: "Kitinan Kanthakat",        // ← แก้ไขบรรทัดนี้
           title: "นักศึกษาวิศวกรรมเมคคาทรอนิกส์", // ← แก้ไขบรรทัดนี้
           location: "เชียงใหม่, ไทย",          // ← แก้ไขบรรทัดนี้
-          //avatar: " ", // ← URL รูปโปรไฟล์ (แก้ไขได้)
+          avatar: "team-members/images/kittinun.jpg", // ← URL รูปโปรไฟล์ (แก้ไขได้)
           bio: "สวัสดีครับ/ค่ะ ฉันชอบสร้างสิ่งประดิษฐ์, เขียนโค้ด และทดลองควบคุมระบบอัตโนมัติแบบสนุก ๆ.", // ← แก้ไขบรรทัดนี้
 
           // ช่องทางติดต่อ (แก้ไขได้)
